--- a/Rules.html
+++ b/Rules.html
@@ -10,6 +10,7 @@ body { background: url("pink.jpg") no-repeat center center fixed;
       background-size: cover;
       }
     </style>
+    <!--makes background picture-->
 
 <style>
 #header {
@@ -28,13 +29,14 @@ body { background: url("pink.jpg") no-repeat center center fixed;
  a:link    {color:black; background-color:transparent; text-decoration:none; font-size: 20px}
  a:visited {color: black;}
 
-
 </style>
+<!--makes the link stay the same color once visited-->
 
 <body>
     <div id ="header">
         <h1>Quick Reminders</h1>
     </div>
+    <!--titles page-->
     
     <div id="section">
     <li> Dress Code:
@@ -43,8 +45,10 @@ body { background: url("pink.jpg") no-repeat center center fixed;
     <li> Parking Guidelines:
         <a href = "http://www.holynames-sea.org/subpage.asp?pageID=114#parking" > Click here to learn more about parking guidelines </a>
         </li>
+        <!--adds links to page-->
     <li> <a href= "index.html"> Home</a>  
     </li>
+    <!--makes home button-->
   <br>
     </div>
 </body>
