--- a/Resources.html
+++ b/Resources.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title> Resources </title>
+<!--titles page-->
     <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
 </head>
 
@@ -24,6 +25,7 @@
 
 
 </style>
+<!--makes visited pages the same color once visited-->
 
 <body>
     <div id ="header">
@@ -45,9 +47,11 @@
         <a href = "http://www.holynames-sea.org/CougarWrites/CougarWrites%20homepage.htm" > Cougar Writes </a> </li>    
     <li> Link to
         <a href = "http://www.khanacademy.org" > Khan Academy </a> </li>
+        <!--adds links to helpful websites-->
         
     <li> <a href= "index.html"> Home</a>  
     </li>
+    <!--creates home button-->
     </p>
   <br>
     </div>
