--- a/Physics.html
+++ b/Physics.html
@@ -9,17 +9,19 @@
 <body>
     <h2> Physics</h2>
 </body>
-    
+    <!--titles page-->
 <body
       <form method="post" action="file-upload-1.htm" name="submit" enctype="multipart/form-data">
   <input type="file" name="fileField"><br /><br />
   <input type="submit" name="submit" value="Submit">
 </form>
+<!--submits files to server-->
 
 </body>
 
 <body>
 <li> <a href= "index.html"> Home</a>  
     </li>
+    <!--creates home button-->
 </body>
 </html>
