--- a/Morality.html
+++ b/Morality.html
@@ -8,19 +8,20 @@
 <body>
     <h2> Morality</h2>
 </body>
-    
+    <!--titles page-->
 <body
       <form method="post" action="file-upload-1.htm" name="submit" enctype="multipart/form-data">
   <input type="file" name="fileField"><br /><br />
   <input type="submit" name="submit" value="Submit">
 </form>
+<!--submits files to server-->
 
 </body>
 <body>
 
 <li type = none> <a href= "index.html"> Home</a>  
     </li>
-    
+    <!--creates home button-->
 </body>
 <body>
 <li> <a href = "prayer.docx">Prayer</a>
