--- a/Junior.html
+++ b/Junior.html
@@ -11,6 +11,7 @@ body { background: url("lake.jpg") no-repeat center center fixed;
       background-size: cover;
       }
     </style>
+    <!--adds background picture to page-->
     
 </body>
 
@@ -50,9 +51,11 @@ body { background: url("lake.jpg") no-repeat center center fixed;
 	</li> 
 	<li> <a href= "HAlgebra1.html"> Honors Precalculus</a>  
 	</li>
+	<!--lists all links to junior classes-->
     <p>
 <li> <a href= "index.html"> Home</a>  
     </li>
+    <!--creates home button-->
     </p>
   <br>
     </div>
