--- a/HPrecalculus.html
+++ b/HPrecalculus.html
@@ -9,16 +9,19 @@
 <body>
     <h2> Honors Precalculus</h2>
 </body>
+<!--titles page-->
     
 <body
       <form method="post" action="file-upload-1.htm" name="submit" enctype="multipart/form-data">
   <input type="file" name="fileField"><br /><br />
   <input type="submit" name="submit" value="Submit">
+  <!--submits files to the server-->
 </form>
 
 </body>
 <body>
-<li> <a href= "index.html"> Home</a>  
+<li> <a href= "index.html"> Home</a> 
+<!--makes home button-->
     </li>
 </body>
 </html>
