--- a/HEnglish10.html
+++ b/HEnglish10.html
@@ -8,17 +8,20 @@
 <div id="container">
 <body>
     <h2> Honors English 10</h2>
+    <!--titles page-->
 </body>
     
 <body
       <form method="post" action="file-upload-1.htm" name="submit" enctype="multipart/form-data">
   <input type="file" name="fileField"><br /><br />
   <input type="submit" name="submit" value="Submit">
+  <!--submkts files to server-->
 </form>
 
 </body>
 <body>
 <li> <a href= "index.html"> Home</a>  
+<!--creates home button--->
     </li>
 </body>
 </html>
