--- a/HChemistry.html
+++ b/HChemistry.html
@@ -8,17 +8,20 @@
 <div id="container">
 <body>
     <h2> Honors Chemistry</h2>
+    <!--titles page-->
 </body>
     
 <body
       <form method="post" action="file-upload-1.htm" name="submit" enctype="multipart/form-data">
   <input type="file" name="fileField"><br /><br />
   <input type="submit" name="submit" value="Submit">
+  <!--submits files to the server-->
 </form>
 
 </body>
 <body>
-<li> <a href= "index.html"> Home</a>  
+<li> <a href= "index.html"> Home</a> 
+<!--creates home button-->
     </li>
 </body>
 <body>
