--- a/Freshman.html
+++ b/Freshman.html
@@ -10,6 +10,7 @@ body { background: url("greentrees.jpg") no-repeat center center fixed;
       background-size: cover;
       }
     </style>
+    <!--adds photo as backgroud-->
     
 <style>
 #header {
@@ -46,9 +47,11 @@ body { background: url("greentrees.jpg") no-repeat center center fixed;
 	<li> <a href= "HAlgebra1.html"> Honors Algebra 1</a>  
 	</li> 
 	<li> <a href= "HAlgebra2.html"> Honors Algebra 2 w/ Trig</a>
+	<!--lists all links to freshman houses-->
     <p>
             <li> <a href= "index.html"> Home</a>  
     </li>
+    <!--creates home button-->
     </p>
         </li> <br> </div>
     
