--- a/French3.html
+++ b/French3.html
@@ -9,16 +9,19 @@
 <body>
     <h2> French 3</h2>
 </body>
+<!--titles page-->
     
 <body
       <form method="post" action="file-upload-1.htm" name="submit" enctype="multipart/form-data">
   <input type="file" name="fileField"><br /><br />
   <input type="submit" name="submit" value="Submit">
+  <!--submits files to server-->
 </form>
 
 </body>
 <body>
 <li> <a href= "index.html"> Home</a>  
+<!--creates home button-->
     </li>
 </body>
 </html>
