--- a/ContemporaryProblems.html
+++ b/ContemporaryProblems.html
@@ -8,18 +8,21 @@
     <div id="container">
 <body>
     <h2> Contemporary Problems</h2>
+    <!--creates home button-->
 </body>
     
 <body
       <form method="post" action="file-upload-1.htm" name="submit" enctype="multipart/form-data">
   <input type="file" name="fileField"><br /><br />
   <input type="submit" name="submit" value="Submit">
+  <!--submits files to server-->
 </form>
 
 </body>
 
 <body>
 <li> <a href= "index.html"> Home</a>  
+<!--creates home button-->
     </li>
 </body>
 </div>
