--- a/APUSH.html
+++ b/APUSH.html
@@ -9,17 +9,20 @@
 
 <body>
     <h2> AP US History</h2>
+    <!--titles page-->
 </body>
     
 <body
       <form method="post" action="file-upload-1.htm" name="submit" enctype="multipart/form-data">
   <input type="file" name="fileField"><br /><br />
   <input type="submit" name="submit" value="Submit">
+  <!--submits files to server-->
 </form>
 
 </body>
 <body>
 <li> <a href= "index.html"> Home</a>  
+<!--creates home button-->
     </li>
 </body>
 </div>
