--- a/APEnviornmentalScience.html
+++ b/APEnviornmentalScience.html
@@ -9,20 +9,20 @@
 
 <body>
     <h2> AP Enviornmental Science</h2>
-    //titles the page
+    <!--titles the page-->
 </body>
     
 <body
       <form method="post" action="file-upload-1.htm" name="submit" enctype="multipart/form-data">
   <input type="file" name="fileField"><br /><br />
   <input type="submit" name="submit" value="Submit">
-  //submits files to server
+  <!--submits files to server-->
 </form>
 
 </body>
 <body>
 <li> <a href= "index.html"> Home</a>  
-//creates a home button
+<!--creates a home button-->
     </li>
 </body>
 </div>
