--- a/APEnglish12.html
+++ b/APEnglish12.html
@@ -8,21 +8,21 @@
     <div id="container">
 <body>
     <h2> AP English 12</h2>
-    //titles page
+    <!--titles page-->
 </body>
     
 <body
       <form method="post" action="file-upload-1.htm" name="submit" enctype="multipart/form-data">
   <input type="file" name="fileField"><br /><br />
   <input type="submit" name="submit" value="Submit">
-  //submits files to server
+  <!--submits files to server-->
 </form>
 
 </body>
 
 <body>
 <li> <a href= "index.html"> Home</a>  
-//creates a home button
+<!--creates a home button-->
     </li>
 </body>
 </div>
