--- a/APCompSci.html
+++ b/APCompSci.html
@@ -8,20 +8,20 @@
     <div id="container">
 <body>
     <h2> AP Computer Science</h2>
-    //titled the page
+    <!--titled the page-->
 </body>
     
 <body
       <form method="post" action="file-upload-1.htm" name="submit" enctype="multipart/form-data">
   <input type="file" name="fileField"><br /><br />
   <input type="submit" name="submit" value="Submit">
-  //submits files to the server
+  <!--submits files to the server-->
 </form>
 
 </body>
 <body>
 <li> <a href= "index.html"> Home</a>
-//creates home button
+<!--creates home button-->
     </li>
 </body>
 </div>
