--- a/APClasses.html
+++ b/APClasses.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title> AP Classes </title>
+<!--titles page-->
     <link href="StyleTemplate.css" media="screen" rel="stylesheet" type="text/css" />
 </head>
     
@@ -10,6 +11,7 @@ body { background: url("chalk.jpg") no-repeat center center fixed;
       background-size: cover;
       }
     </style>
+    <!--mkes photo background-->
     
 </body>
 
@@ -69,7 +71,9 @@ body { background: url("chalk.jpg") no-repeat center center fixed;
     <li> <a href= "APStudioArt.html"> AP Studio Art </a>  
     </li>
     <p>
+        <!--lists links to all ap pages-->
 <li> <a href= "index.html"> Home</a>  
+<!--creates home button-->
     </li>
     </p>
   <br>
