--- a/APCalculusBC.html
+++ b/APCalculusBC.html
@@ -8,20 +8,20 @@
     <div id="container">
 <body>
     <h2> AP Calculus BC</h2>
-    //creating page title
+    <!--creating page title-->
 </body>
     
 <body
       <form method="post" action="file-upload-1.htm" name="submit" enctype="multipart/form-data">
   <input type="file" name="fileField"><br /><br />
   <input type="submit" name="submit" value="Submit">
-  //code to upload files to the server
+  <!--code to upload files to the server-->
 </form>
 
 </body>
 <body>
 <li> <a href= "index.html"> Home</a>  
-//home button
+<!--home button-->
     </li>
 </body>
 </div>
