--- a/APCalculusAB.html
+++ b/APCalculusAB.html
@@ -8,20 +8,20 @@
     <div id="container">
 <body>
     <h2> AP Calculus AB</h2>
-    //creating a title
+    <!--creating a title-->
 </body>
     
 <body
       <form method="post" action="file-upload-1.htm" name="submit" enctype="multipart/form-data">
   <input type="file" name="fileField"><br /><br />
   <input type="submit" name="submit" value="Submit">
-  //code to add files to the server
+  <!--code to add files to the server-->
 </form>
 
 </body>
 <body>
 <li> <a href= "index.html"> Home</a>
-//creating home button
+<!--creating home button-->
     </li>
 </body>
 </div>
