--- a/APBiology.html
+++ b/APBiology.html
@@ -8,20 +8,20 @@
     <div id="container">
 <body>
     <h2> AP Biology</h2>
-    //creating title
+    <!--creating title-->
 </body>
     
 <body
       <form method="post" action="file-upload-1.htm" name="submit" enctype="multipart/form-data">
   <input type="file" name="fileField"><br /><br />
   <input type="submit" name="submit" value="Submit">
-  //code to submit the file to the server
+  <!--code to submit the file to the server-->
 </form>
 
 </body>
 <body>
 <li> <a href= "index.html"> Home</a> 
-//creating home button
+<!--creating home button-->
     </li>
 </body>
 </div>
