Fixed last minute bugs

--- a/Chemistry.html
+++ b/Chemistry.html
@@ -19,7 +19,10 @@
 </form>
 
 </body>
-
+<body>
+<li> <a href = "chem tips.docx">Chemistry Tips</a>
+    </li>
+</body>
 <body>
 <li> <a href= "index.html"> Home</a>  
 <!--creates home button-->
