Added pic to resources

--- a/Resources.html
+++ b/Resources.html
@@ -26,10 +26,17 @@
 
 </style>
 <!--makes visited pages the same color once visited-->
-
+<body>
+    <style>
+        body { background: url("resources.jpg") no-repeat center center fixed;
+            background-size: cover;
+        }
+    </style>
+    <!--adds background picture to page-->
+    </body>
 <body>
     <div id ="header">
-        <h1>Resources</h1>
+        <h2>Resources</h2>
     </div>
     
     <div id="nav">
